--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  
+  "homepage": "https://austinmorales09.github.io/poketimes-25/",
   "name": "poketimes",
   "private": true,
   "version": "0.0.0",
